Move test event data into json

--- a/client/index.html
+++ b/client/index.html
@@ -38,6 +38,10 @@
         templateUrl: 'assets/templates/event-list.html',
         controller: 'EventController'
       }).
+      when('/test', {
+        templateUrl: 'assets/templates/test.html',
+        controller: 'EventController'
+      }).
       /*
       when('/events/:eventId', {
         templateUrl: 'partials/phone-detail.html',
