--- a/client/index.html
+++ b/client/index.html
@@ -37,8 +37,8 @@
         templateUrl: 'assets/templates/event-list.html',
         controller: 'EventController'
       }).
-      when('/aaron', {
-        templateUrl: 'assets/templates/testcomment.html',
+      when('/events/:eventId', {
+        templateUrl: 'assets/templates/event-detail.html',
         controller: 'EventDetailsController'
       }).
 
