Temp commit of main

--- a/client/index.html
+++ b/client/index.html
@@ -41,6 +41,10 @@
         templateUrl: 'assets/templates/testcomment.html',
         controller: 'EventDetailsController'
       }).
+      when('/main', {
+        templateUrl: 'assets/templates/main.html',
+        controller: 'MainController'
+      }).
 
       /*
       when('/events/:eventId', {
