--- a/client/index.html
+++ b/client/index.html
@@ -11,9 +11,9 @@
   <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
   <link rel="stylesheet" href="assets/css/app.css"/>
 </head>
-<body ng-app="HackUCSC2016" ng-cloak>
+<body ng-app="HackUCSC2016" ng-cloak ng-view layout="column">
 
-  <div ng-view layout="column"></div>
+  <div ></div>
 
   <!-- Angular Material requires Angular.js Libraries -->
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
