--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,7 @@
     angular.module('HackUCSC2016', ['ngMaterial', 'ngRoute', 'mcraControllers', 'mcraServices'])
     .config(function($mdThemingProvider, $mdIconProvider, $routeProvider, $httpProvider){
       $mdThemingProvider.theme('default')
+        .dark()
         .accentPalette('green');
       // $httpProvider.interceptors.push('httpInterceptor'); // TODO
       $routeProvider.
