fix color/text issues

--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,7 @@
       $mdThemingProvider.theme('default')
         .dark()
         .primaryPalette('lime')
-        .accentPalette('light-green');
+        .accentPalette('green');
       // $httpProvider.interceptors.push('httpInterceptor'); // TODO
       $routeProvider.
       when('/', {
